--- a/ch03/ex_3_8/src/main/resources/application.properties
+++ b/ch03/ex_3_8/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=8888
-spring.cloud.config.server.git.uri=https://github.com/kutayagbal/cloud_native_java/tree/master/config-server-configuration-repository
+spring.cloud.config.server.git.uri=http://github.com/kutayagbal/cloud_native_java/tree/master/ch03/config-server-configuration-repository
